--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,7 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: pip install build twine
       - name: "Build package"
-        run: "scripts/build"
+        run: python setup.py clean --all bdist_wheel
       - name: "Publish to PyPI"
         run: twine upload dist/*
         env:
